site now running on NodeJS with TDD

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <body>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/vendor/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/flat-ui.css"/>
-    <link rel="stylesheet" href="css/tolstoy.css"/>
+    <link rel="stylesheet" href="stylesheets/tolstoy.css"/>
      <!-- Latest Sortable -->
     <script src="http://rubaxa.github.io/Sortable/Sortable.js"></script>
     <!-- MathJS -->
@@ -27,11 +27,11 @@
           <div class="photoarea">
             <h3>Pierre</h3>
             <div id="pierre">
-              <img class="img-circle" src="img/1956_pierre.jpg" alt="Henry Fonda" data-age="51">
-              <img class="img-circle" src="img/1967_pierre.jpg" alt="Sergei Bondarchuk" data-age="47">
-              <img class="img-circle" src="img/1972_pierre.jpg" alt="Anthony Hopkins" data-age="34">
-              <img class="img-circle" src="img/2007_pierre.jpg" alt="Alexander Beyer" data-age="34">
-              <img class="img-circle" src="img/2016_pierre.png" alt="Paul Dano" data-age="31">
+              <img class="img-circle" src="images/1956_pierre.jpg" alt="Henry Fonda" data-age="51">
+              <img class="img-circle" src="images/1967_pierre.jpg" alt="Sergei Bondarchuk" data-age="47">
+              <img class="img-circle" src="images/1972_pierre.jpg" alt="Anthony Hopkins" data-age="34">
+              <img class="img-circle" src="images/2007_pierre.jpg" alt="Alexander Beyer" data-age="34">
+              <img class="img-circle" src="images/2016_pierre.png" alt="Paul Dano" data-age="31">
             </div>
           </div>
         </div>
@@ -44,11 +44,11 @@
           <div class="photoarea">
             <h3>Natasha</h3>
             <div id="natasha">
-              <img class="img-circle" src="img/1956_natasha.jpg" alt="Audrey Hepburn" data-age="27">
-              <img class="img-circle" src="img/1967_natasha.jpg" alt="Ludmila Savelyeva" data-age="25">
-              <img class="img-circle" src="img/1972_natasha.jpg" alt="Morag Hood" data-age="30">
-              <img class="img-circle" src="img/2007_natasha.jpg" alt="Clémence Poésy" data-age="25">
-              <img class="img-circle" src="img/2016_natasha.jpg" alt="Lily James" data-age="26">
+              <img class="img-circle" src="images/1956_natasha.jpg" alt="Audrey Hepburn" data-age="27">
+              <img class="img-circle" src="images/1967_natasha.jpg" alt="Ludmila Savelyeva" data-age="25">
+              <img class="img-circle" src="images/1972_natasha.jpg" alt="Morag Hood" data-age="30">
+              <img class="img-circle" src="images/2007_natasha.jpg" alt="Clémence Poésy" data-age="25">
+              <img class="img-circle" src="images/2016_natasha.jpg" alt="Lily James" data-age="26">
             </div>
            </div>
         </div>
@@ -61,11 +61,11 @@
           <div class="photoarea">
             <h3>Andrei</h3>
             <div id="andrei" data-age-number="66">
-              <img class="img-circle" src="img/1956_andrei.jpg" alt="Mel Ferrer" data-age="39">
-              <img class="img-circle" src="img/1967_andrei.jpg" alt="Vyacheslav Tikhonov" data-age="39">
-              <img class="img-circle" src="img/1972_andrei.jpg" alt="Alan Dobie" data-age="40">
-              <img class="img-circle" src="img/2007_andrei.jpg" alt="Alessio Boni" data-age="41">
-              <img class="img-circle" src="img/2016_andrei.png" alt="James Norton" data-age="30">
+              <img class="img-circle" src="images/1956_andrei.jpg" alt="Mel Ferrer" data-age="39">
+              <img class="img-circle" src="images/1967_andrei.jpg" alt="Vyacheslav Tikhonov" data-age="39">
+              <img class="img-circle" src="images/1972_andrei.jpg" alt="Alan Dobie" data-age="40">
+              <img class="img-circle" src="images/2007_andrei.jpg" alt="Alessio Boni" data-age="41">
+              <img class="img-circle" src="images/2016_andrei.png" alt="James Norton" data-age="30">
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
 
     </div>
     
-    <script src="js/tolstoy.js"></script>
+    <script src="javascripts/tolstoy.js"></script>
 
   </body>
 
